<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">NanoDegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores</string>
    <string name="library_app">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">ZXY Reader</string>
    <string name="capstone">Capstone</string>
</resources>
