<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#ffdfeaf1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:weightSum="1">

        <TextView android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="45dp"/>

        <Button
            style="@style/UdacityOrangeButton"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify" />
        <Button
            style="@style/UdacityOrangeButton"
            android:text="@string/scores_app"
            android:id="@+id/scores"/>
        <Button
            style="@style/UdacityOrangeButton"
            android:text="@string/library_app"
            android:id="@+id/library" />
        <Button
            style="@style/UdacityOrangeButton"
            android:text="@string/build_it_bigger"
            android:id="@+id/build_it_bigger" />
        <Button
            style="@style/UdacityOrangeButton"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_reader" />
        <Button
            style="@style/UdacityOrangeButton"
            android:background="#456789"
            android:textColor="#ffffff"
            android:text="@string/capstone"
            android:id="@+id/capstone" />

    </LinearLayout>
</ScrollView>
